# WhisperLayer

./: .gitignore  =1.1  =3.8  LICENSE  README.md  arch.md  context.md  debug_return_key.py  gemini-overlay.py  install.sh  install.sh.bak  pyproject.toml  requirements.txt  test_ydotool_lowercase.py  test_ydotool_names.py  test_ydotool_newline.py  uninstall.sh  update.sh  voicetype.desktop  voicetype.service  whisperlayer.desktop
tests/: test_macros.py
voicetype/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkey.py  overlay.py  settings.py  settings_ui.py  system.py  transcriber.py  tray.py
whisperlayer/: __init__.py  __main__.py  app.py  commands.py  config.py  hotkey.py  ollama_service.py  overlay.py  settings.py  settings_ui.py  system.py  transcriber.py  tray.py
whisperlayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
