[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetype"
version = "1.0.0"
description = "Linux Native Speech-to-Text Voice Typing with Whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoiceType Contributors"}
]
keywords = ["speech-to-text", "voice-typing", "whisper", "linux", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Accessibility",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "PyGObject>=3.44.0",
    "torch>=2.0.0",
    "pulsectl>=23.5.0",
    "evdev>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
voicetype = "voicetype.__main__:main"

[project.gui-scripts]
voicetype-gui = "voicetype.__main__:main"

[project.urls]
Homepage = "https://github.com/voicetype/voicetype"
Documentation = "https://github.com/voicetype/voicetype#readme"
Repository = "https://github.com/voicetype/voicetype"
Issues = "https://github.com/voicetype/voicetype/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicetype*"]

[tool.setuptools.package-data]
voicetype = ["*.desktop", "*.svg", "*.png"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
